[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LE-RoseEngine"
version = "0.1.4"
description = "Rose Engine emulator for the LatheEngraver"
authors = [
    {name = "Paul Paukstelis", email = "transpirationturning@gmail.com"}
]
readme = {file = "README.md", content-type = "markdown"}
dynamic = [
    "license"
]

requires-python = ">=3.7, <4"

# any additional requirements (besides OctoPrint) should be listed here
dependencies = ["numpy","svgpathtools", "plotly"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = [
    "LE_roseengine",
    "LE_roseengine.*"
]

[project.entry-points."octoprint.plugin"]
roseengine = "LE_roseengine"

[project.urls]
Homepage = "https://github.com/paukstelis/LE-RoseEngine"

[project.optional-dependencies]
develop = [
    "go-task-bin"
]
